# learning_cpp

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json
include/: definitions.hpp
src/: linked_list.cpp  linked_list.h  main.cpp
